--- a/blog.html
+++ b/blog.html
@@ -32,4 +32,5 @@
             </footer>
         </div>
         <script src="./assets/js/blog.js"></script>
+        <script src="./assets/js/logic.js"></script>
     </body>
