Added logic for rendering blog posts

--- a/blog.html
+++ b/blog.html
@@ -15,19 +15,20 @@
                 <h1>My First Blog</h1>
                 <div id="theme-switcher">☀️</div>
                 <button>Back</button>
-                
             </header>
 
-            <section>
+            <article>
              <!--Blog posts will be dynamically added here-->
-            </section>
+            </article>
 
             <footer>
-                <p>Made with love by Me</p>
+                <p>Made with ❤️ by Brooke</p>
                 <ul>
-                    <li>Portfolio:</li>
-                    <li>Blog:</li>
-                    <li>Email:</li>
+                    <li>Portfolio:
+                        <a href="link">MyPortfolio</a>
+                    </li>
+                    <li>Blog: My blog</li>
+                    <li>Email: example@email.com</li>
                 </ul>
             </footer>
         </div>
